2006-08-22	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* utils-w32/userinfo.cpp:
	added userinfo-utility

	* configure.in:
	* Makefile.am:
	* utils-w32/:
	added directory for several utils used by win32-version of localSystem

	* common/src/local_system.cpp:
	(Win32)
	as there're problems when using functions from netapi32.dll we can't
	use some functions we need for getUserName(), therefore this code has
	been moved to "userinfo"-utility which is called periodically by
	userPollThread - localSystem::currentUser() now returns what the
	userPollThread received when launching userinfo

2006-08-18	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/client.cpp:
	do not reload user-name each time screen is being updated, instead do
	only if user-name not set so far or is "unknown"

	* common/src/local_system.cpp:
	completely new code for retrieving user-name and his full name of
	logged in user under win

2006-08-17	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/src/local_system.cpp:
	correct system-calls for shutting down, rebooting and logging off user

	* ima/src/client.cpp:
	bugfixes

2006-08-16	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/src/ivs_connection.cpp:
	fixed some bugs in palette-filter/tight-encoding which were
	responsible for grave graphic-errors in some cases (when using
	mono-palette)

	* common/include/ivs_connection.h:
	* common/src/ivs_connection.cpp:
	added Zlib-encoding

	* common/include/rfb/rfbint.h:
	* common/include/rfb/rfbconfig.h:
	removed as generated by configure

	* ima/resources/splash.png:
	new modern splash-screen

2006-08-15	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/src/ivs_connection.cpp:
	disabled tight- and zlib-encoding for the moment as it causes
	graphic-errors when connecting to Win32-VNC-server

	* ima/src/client.cpp:
	* ima/src/client_manager.cpp:
	fixes with bool-vars

	* ima/src/config_widget.cpp: