@@ -1,5 +1,9 @@
 2006-08-22	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
+	* ima/src/client.cpp:
+	when re-entering view-only-mode, check do not crash if passed
+	connection-pointer is NULL
+
 	* utils-w32/userinfo.cpp:
 	added userinfo-utility
 
